--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,11 @@ header{
   margin-right: 25px;
  
 }
+.foto-principal {
+  justify-content: center !important;
+}
+
+
 .copyrigth {
   margin-left: 15px;
 }
@@ -21,4 +26,18 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: rgba(192, 188, 188, 0.4);
+}
+.description {
+  text-align: justify;
+  list-style: none;
+}
+.twitter {
+  margin-right: 35px;
+}
+.text-dark {
+  
+  &:hover {
+    font-weight: 600;
+   
+}
 }
