--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@ header{
   margin-left: 15px;
 }
 footer {
-  position: fixed;
+ 
   bottom: 0;
   width: 100%;
   background-color: rgba(192, 188, 188, 0.4);
@@ -40,4 +40,15 @@ footer {
     font-weight: 600;
    
 }
+}
+.custom-img-container {
+  width: 100%;
+  height: 400px; /* Establece la altura fija deseada */
+  overflow: hidden; /* Oculta cualquier parte de la imagen que exceda el contenedor */
+}
+
+.custom-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen para cubrir el contenedor manteniendo la relación de aspecto */
 }
